pancake button added

--- a/css/style.css
+++ b/css/style.css
@@ -5527,3 +5527,31 @@ _:future {
   height: 1px;
   display: none; /* Müzik çaları gizle */
 }
+
+.fixed-pancakes {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  z-index: 9999;
+  text-align: center;
+}
+.fixed-pancakes:before {
+  content: "";
+  width: 50px;
+  height: 50px;
+  background-color: #ffbd37;
+  position: absolute;
+  border-radius: 100%;
+  box-shadow: 0 1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+.fixed-pancakes img {
+  vertical-align: middle;
+  z-index: 2;
+  position: relative;
+}
